vlib/v/checker/tests/for_in_empty_range_mixed_cast_err.out
vlib/v/checker/tests/for_in_empty_range_mixed_cast_err.vv:2:11: error: empty range: `4 .. 3` will never execute
    1 | fn main() {
    2 |     for i in 4 .. int(2) + u8(1) {
      |              ~~~~~~~~~~~~~~~~~~~
    3 |         println(i)
    4 |     }
vlib/v/checker/tests/for_in_empty_range_mixed_cast_err.vv:6:11: error: empty range: `0 .. -5` will never execute
    4 |     }
    5 | 
    6 |     for i in 0 .. i32(5) - i8(10) {
      |              ~~~~~~~~~~~~~~~~~~~~
    7 |         println(i)
    8 |     }
vlib/v/checker/tests/for_in_empty_range_mixed_cast_err.vv:10:11: error: empty range: `3 .. 3` will never execute
    8 |     }
    9 | 
   10 |     for i in u8(1) + u16(2) .. 3 {
      |              ~~~~~~~~~~~~~~~~~~~
   11 |         println(i)
   12 |     }
vlib/v/checker/tests/for_in_empty_range_mixed_cast_err.vv:14:11: error: empty range: `0 .. -5` will never execute
   12 |     }
   13 | 
   14 |     for i in 0 .. i16(5) - i32(10) {
      |              ~~~~~~~~~~~~~~~~~~~~~
   15 |         println(i)
   16 |     }
vlib/v/checker/tests/for_in_empty_range_mixed_cast_err.vv:18:11: error: empty range: `3 .. 3` will never execute
   16 |     }
   17 | 
   18 |     for i in u32(2) + i64(1) .. 3 {
      |              ~~~~~~~~~~~~~~~~~~~~
   19 |         println(i)
   20 |     }
vlib/v/checker/tests/for_in_empty_range_mixed_cast_err.vv:22:11: error: empty range: `2 .. 1` will never execute
   20 |     }
   21 | 
   22 |     for i in 2 .. u64(5) - u8(4) {
      |              ~~~~~~~~~~~~~~~~~~~
   23 |         println(i)
   24 |     }