vlib/v/checker/tests/for_in_empty_range_mixed_cast_err.vv
fn main() {
	for i in 4 .. int(2) + u8(1) {
		println(i)
	}

	for i in 0 .. i32(5) - i8(10) {
		println(i)
	}

	for i in u8(1) + u16(2) .. 3 {
		println(i)
	}

	for i in 0 .. i16(5) - i32(10) {
		println(i)
	}

	for i in u32(2) + i64(1) .. 3 {
		println(i)
	}

	for i in 2 .. u64(5) - u8(4) {
		println(i)
	}
}
